--- a/.gitattributes
+++ b/.gitattributes
@@ -1,24 +1,31 @@
-*.mlx -crlf -diff -merge
-*.mat -crlf -diff -merge
-*.fig -crlf -diff -merge
-*.mdl -crlf -diff -merge
-*.slx -crlf -diff -merge
-*.mlapp -crlf -diff -merge
-*.p -crlf -diff -merge
-*.mdlp -crlf -diff -merge
-*.slxp -crlf -diff -merge
-*.sldd -crlf -diff -merge
-*.slxc -crlf -diff -merge
-*.mlproj -crlf -diff -merge
-*.mldatx -crlf -diff -merge
-*.slreqx -crlf -diff -merge
-*.sfx -crlf -diff -merge
-*.sltx -crlf -diff -merge
-*.mexa64 -crlf -diff -merge
-*.mexw64 -crlf -diff -merge
-*.mexmaci64 -crlf -diff -merge
-*.xlsx -crlf -diff -merge
-*.docx -crlf -diff -merge
-*.pdf -crlf -diff -merge
-*.jpg -crlf -diff -merge
-*.png -crlf -diff -merge
+*.fig filter=lfs diff=lfs merge=lfs -text
+*.mat filter=lfs diff=lfs merge=lfs -text
+*.mdl binary diff merge=mlAutoMerge
+*.mdlp binary
+*.mexa64 binary
+*.mexw64 binary
+*.mexmaci64 binary
+*.mlapp binary
+*.mldatx binary
+*.mlproj binary
+*.mlx binary
+*.p binary
+*.sfx binary
+*.sldd binary
+*.slreqx binary merge=mlAutoMerge
+*.slmx binary merge=mlAutoMerge
+*.sltx binary
+*.slxc binary
+*.slx binary merge=mlAutoMerge
+*.slxp binary
+
+## Other common binary file types to track using Git-LFS
+*.docx filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
+*.dat filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
